Correção redirecionamento cadastro

--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -60,7 +60,7 @@
     </div>
     
     <div>
-      <button id="Sent" type="submit" value="Cadastrar" onclick="location.href='http://127.0.0.1:5500/codigo-fonte/src/Login/login.html'" type="button">Cadastrar</button>
+      <button id="Sent" type="submit" value="Cadastrar" type="button">Cadastrar</button>
   </div>
 </form>
 </body>
