--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -11,11 +11,11 @@
     <script defer src="./crud-dispositivos.js"></script>
     <script defer src="./crud-Ambientes.js"></script>
     <script defer src="./funcoes.js"></script>
-    <link defer rel="stylesheet" href="Chat.css">
-    <script defer src="Chat.js"></script>
-    <script defer src="modal-chat.js"></script>
+    <link rel="stylesheet" href="Chat.css">
+    <script src="Chat.js"></script>
+    <script src="modal-chat.js"></script>
     <title>Dashboard</title>
-</head>
+</head> 
 <body>
     <header>
         <div class="logo"><img src="../imagens/Logo 3.png"/></div>
