--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -44,7 +44,7 @@
                     <ul><img class="imagens" src="assets/web-chat.png">Chat para contato online.</ul>
                     <ul><img class="imagens" src="assets/dispositivos-eletronicos.png" alt="">Gerencie até 40 equipamentos.</ul>
                     <ul><img class="imagens" src="assets/ambiente.png" alt="">Adicione até 8 perfis de ambiente.</ul>
-                    <ul><img class="imagens" src="assets/status.png">Status dos dispositivos em tempo real.</ul>
+                    <ul><img class="imagens" src="assets/status.png">Status dos dispositivos em tempo real testando a issue.</ul>
                 </ol>
             </span>
             <button class="saiba"><a href="../Cadastro/cadastro.html">Assine já </a></button>
